--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
     <Analyzer Include="C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Check.cs" />
     <Compile Include="Assets\Scripts\GameCore_Data.cs" />
     <Compile Include="Assets\Scripts\Showdir.cs" />
     <Compile Include="Assets\Scripts\Temporarycontrol.cs" />
